Front End version 1 almost completed, Now working on backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ssukhvant",
+  "homepage": "https://www.ssukhvant.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
